# in_concert

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
.github/workflows/: lint-test.yaml
documentation/source/: conf.py  index.rst
documentation/source/sections/: introduction.rst
in_concert/: __init__.py  authorization.py  settings.py  user_management.py
in_concert/app/: __init__.py  alembic.ini  app_factory.py  forms.py  main.py  models.py  schemas.py
in_concert/app/alembic/: env.py
in_concert/app/alembic/versions/: 0078de3bfcc8_model_user_under_main_app.py  1ee3a6aebd1d_init_alembic.py  242e77610b56_create_user_table.py  4d0225614456_add_genre_to_band.py  513886cb9fcd_init.py  57a8e0f3dc7b_add_venue_model.py  62e3a0e70766_add_band_manager.py  658655aa93c5_add_band.py  7486fdbf7149_model_user_under_main_app.py  7caf26a60bde_add_venue_model.py  880d7345efd4_use_sub_as_only_id_column.py  91ffb1873e62_model_user_under_main_app.py  a840e84e705b_add_about_venue.py  (+2 more)
in_concert/app/static/: styles.css
in_concert/app/templates/: band.html  band_form.html  bands.html  base.html  home.html  venue.html  venue_form.html  venues.html
in_concert/auth/: user_management.py
in_concert/dependencies/: __init__.py  db_session.py  schemas.py
in_concert/dependencies/auth/: __init__.py  token_validation.py  user_authorization.py  user_management.py
in_concert/logging/: __init__.py  logging_config.yaml  named_loggers_base.py
in_concert/logging_in_concert/: main.py
in_concert/routers/: __init__.py  auth_router.py
in_concert/routers/alembic/: env.py
in_concert/routers/auth/: alembic.ini  auth_router.py
tests/: conftest.py  setup.py  test_authorization.py  test_user_management.py
tests/app/: test_app.py  test_models.py
tests/auth/: test_authorization.py  test_user_management.py
tests/dependencies/auth/: test_authorization.py  test_user_authorization.py  test_user_management.py
tests/features/: access_private_data.feature  environment.py  fixtures.py
tests/features/steps/: access_private_data.py
tests/routers/: test_auth_router.py
tests/unit/: conftest.py
tests/unit/app/: test_app.py  test_models.py  test_route_protection_auth.py
tests/unit/routers/: test_auth_router.py
(+5 files in other folders)
