[tool.poetry]
name = "in_concert"
version = "0.1.0"
description = ""
authors = ["Johannes Birk <Johannes.Birk11@web.de>"]
readme = "documentation/source/index.rst"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.0"
authlib = "^1.2.1"
httpx = "^0.24.1"

[tool.poetry.group.dev.dependencies]
black = "22.*"
flake8 = "6.*"
pre-commit = "*"
sphinx = "*"
sphinx-autoapi = "*"
sphinx-rtd-theme = "*"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.flake8]
ignore = "E203"
max-line-length = 120

[tool.isort]
profile = "black"
